complete the lab

--- a/views/celebrities/index.hbs
+++ b/views/celebrities/index.hbs
@@ -6,12 +6,22 @@
         <p>{{name}}</p>
     </a>
 
+    <p>Occupation {{occupation}}</p>
+    <p>Catchphrase {{catchPhrase}}</p>
+
     <form action="/celebrities/{{_id}}/delete" method="POST">
     <button type="submit">Delete the celebrity</button>
     </form>
+
+    <form action="/celebrities/{{_id}}/edit" method="GET">
+    <button type="submit">Edit the celebrity</button>
+    </form>
+    
 {{/each}}
+<br>
 
 <a href='/celebrities/new'>Add a new celebrity</a>
+
 
 
 
