--- a/views/celebrities/new.hbs
+++ b/views/celebrities/new.hbs
@@ -6,8 +6,8 @@
 	<label for="occupation">Occupation: </label>
 	<input type="text" id="occupation" name="occupation">
 
-	<label for="catchPhrase">Motto: </label>
-	<input type="catchPhrase" id="catchPhrase" name="catchPhrase">
+	<label for="catchPhrase">Catch-phrase: </label>
+	<input type="text" id="catchPhrase" name="catchPhrase">
 
 	<button type="submit">Add this celebrity to your list</button>
 </form>
