--- a/views/celebrities/show.hbs
+++ b/views/celebrities/show.hbs
@@ -1,8 +1,8 @@
-<h2>Here are the detailed information about the celebrity:</h2>
+<h2>Here is the detailed information about the celebrity:</h2>
 
 {{#with celebrityDetail}}
     <h1>Name: {{name}}</h1>
     <h2>Occupation: {{occupation}}</h2>
-    <p>Motto: {{catchPhrase}}</p>
+    <p>Catch-phrase: {{catchPhrase}}</p>
 {{/with}}
 
