--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,9 @@
 <p>Welcome Ironhacker!</p>
 
-<a href="celebrities">
+<a href="/celebrities">
     <button>List celebrities</button>
+</a>
+
+<a href="/movies">
+    <button>List movies</button>
 </a>
